INT-20824 theme_snap: Fix participants title alignment

--- a/scss/_userprofile.scss
+++ b/scss/_userprofile.scss
@@ -180,3 +180,11 @@
 #page-user-profile .snap-page-heading-button .singlebutton:nth-of-type(2) {
     display: none;
 }
+
+body#page-course-view-participants {
+    .page-context-header {
+        text-align: left;
+        display: flex;
+        flex-direction: row;
+    }
+}
